# StreamCore

./: .gitignore  Build.ps1  LICENSE  README.md  docker-compose.yml
.github/workflows/: chatui-docker-image.yml  docker-image.yml  docker-images.yml  publish-crate.yml  publish-docker-images.yml  trovo-docker-image.yml  twitch-docker-image.yml  youtube-docker-image.yml
ChatUI/: .dockerignore  Cargo.toml  Dockerfile  pubspec.yaml
ChatUI/public/: default.css  default.js  main.html  main.js  se_wrapper.js
ChatUI/public/cust/test/: default.css  default.js  index.json
ChatUI/src/: handlers.rs  main.rs  ws.rs
Schemas/: emote.json  register_oauth.json
Shared_Code/Rust/chat_objects/: Cargo.toml
Shared_Code/Rust/chat_objects/src/: lib.rs
Shared_Code/Rust/message_client/: Cargo.toml
Shared_Code/Rust/message_client/src/: client.rs  lib.rs
Trovo/: Cargo.toml  Dockerfile  cargo.toml
Trovo/src/: main.rs
Twitch/: Cargo.toml  Dockerfile
Twitch/src/: main.rs
VStream/: Cargo.toml  Dockerfile
VStream/src/: main.rs  vstream.rs
Youtube/: Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
Youtube/lib/: browser.js  client.js  pageController.js  pageScraper.js  utils.js
Youtube/src/: main.js  youtube.rs
Youtube_Rewrite/: Cargo.toml  Dockerfile  recipe.json
Youtube_Rewrite/src/: config.rs  main.rs
docs/: index.md
docs/Schemas/: chat.json  emote.json  register_oauth.json
testing/: docker-compose.yml
