[package]
name = "streamcore_trovo_chat_ingest"
version = "0.1.3"
authors = ["exlted <exltedofdrg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trovo = "0.5.0"
tokio = { version = "1.17.0" }
serde_json = "1.0.81"
futures-util = "0.3.21"
regex = "1"
lazy_static = "1"
streamcore_chat_objects = "~0"
streamcore_message_client = "0.1.3"
chrono = "0.4"