[package]
name = "streamcore_twitch_chat_ingest"
version = "0.1.0"
authors = ["exlted <exltedofdrg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch-irc = "3.0.1"
tokio = { version = "1.17.0", features = ["full"] }
warp = "0.3.1"
futures = { version = "0.3.17", default-features = true }
tokio-amqp = "1.0.0"
thiserror = "1.0.30"
deadpool = "0.9.0"
deadpool-lapin = "0.9.0"
amiquip = "0.4.2"
serde = "1.0.137"
serde_json = "1.0.81"