[package]
name = "streamcore_twitch_chat_ingest"
version = "0.1.3"
authors = ["exlted <exltedofdrg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch-irc = "5.0.0"
tokio = { version = "1.17.0", features = ["full"] }
warp = "0.3.1"
futures = { version = "0.3.17", default-features = true }
serde_json = "1.0.81"
streamcore_chat_objects = "~0"
streamcore_message_client = "0.1.3"
async-trait = "0.1.72"