[package]
name = "streamcore_youtube_chat_ingest"
version = "0.1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
streamcore_chat_objects = "0.1.4"
streamcore_message_client = "0.1.3"
serde_json = "1.0.81"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.6"
futures = { version = "0.3.17", default-features = true }
uuid = { version = "0.4", features = ["serde", "v4"] }
async-trait = "0.1.72"
serde = "1.0.175"
reqwest = "0.11.18"
tokio-tungstenite = {version = "0.20.0", features = ["native-tls"]}
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
