[package]
name = "streamcore_message_client"
version = "0.1.0"
authors = ["exlted <exltedofdrg@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Helper library for the StreamCore project wrapping amqprs to make its use consistent across all services"
repository = "https://github.com/exlted/StreamCore"
homepage = "https://github.com/exlted/StreamCore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
amqprs = "1.4.0"
tokio = { version = "1", features = ["parking_lot"]}